--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -402,6 +402,9 @@ img{
 .app__description{
   margin-bottom: var(--mb-5);
 }
+.disc__description{
+  font-size: var(--smaller-font-size);
+}
 
 .app__stores{
   margin-bottom: var(--mb-4);
