--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,8 +6,8 @@
   --header-height: 3rem;
 
   /*========== Colors ==========*/
-  --first-color: #069C54;
-  --first-color-alt: #048654;
+  --first-color: #9c3512e9;
+  --first-color-alt: #9c3512e9;
   --title-color: #393939;
   --text-color: #707070;
   --text-color-light: #A6A6A6;
@@ -71,8 +71,8 @@ logoing{
 body.dark-theme{
   --title-color: #F1F3F2;
   --text-color: #C7D1CC;
-  --body-color: #1D2521;
-  --container-color: #27302C;
+  --body-color: #3e332a;
+  --container-color: #4a3027;
 }
 
 /*========== Button Dark/Light ==========*/
@@ -257,6 +257,7 @@ img{
 .home__container{
   height: calc(100vh - var(--header-height));
   align-content: center;
+  margin-top: calc(10vh);
 }
 
 .home__title{
@@ -375,14 +376,21 @@ img{
 
 .menu__name{
   font-size: var(--normal-font-size);
+  margin-bottom: 10px;
 }
 
 .menu__detail, .menu__preci{
-  font-size: var(--small-font-size);
+  font-size: var(--smaller-font-size);
 }
 
 .menu__detail{
   margin-bottom: var(--mb-1);
+}
+
+.menu__subdetail{
+  font-size: var(--small-font-size);
+  margin-bottom: var(--mb-1);
+  color: #4a3027;
 }
 
 .menu__button{
